--- a/Relatório/conference_101719.tex
+++ b/Relatório/conference_101719.tex
@@ -12,7 +12,7 @@
 \begin{document}
 
 \title{Pulsar\\
-(edição de halloween)}
+(Edição de halloween)}
 
 \author{\IEEEauthorblockN{Caleb Martim}
 \IEEEauthorblockA{\textit{Depto. de Ciências da Computação} \\
@@ -34,201 +34,112 @@ Brasília, Brasil \\}
 
 \begin{abstract}
 Este documento é um relatório para o projeto do grupo 6 da disciplina Introdução aos Sistemas Computacionais do semestre 2022.1 na Universidade de Brasília. O projeto é um jogo de videogame programado em Assembly na arquitetura RISC-V baseado em um outro jogo para fliperamas de 1981, Pulsar. 
-Pulsar é um jogo de labirinto onde o jogador controla um tanque e seu objetivo é pegar chaves pelo mapa para desbloquear a próxima fase. 
-RISC-V, por vez, é um Instruction Set Architecture providenciado sob licenças de código aberto dando a liberdade para qualquer um que desejar projetar um processador baseado nele. 
+
+Pulsar é um jogo de labirinto onde o jogador controla um tanque e seu objetivo é pegar chaves pelo mapa para desbloquear a próxima fase.$[1](https://www.arcade-museum.com/game_detail.php?game_id=9150)$
+
+RISC-V, por vez, é um Instruction Set Architecture providenciado sob licenças de código aberto dando a liberdade para qualquer um que desejar projetar um processador baseado nele.$[2](https://riscv.org/about/)$
+
 O jogo do projeto foi desenvolvido com suporte do RARS, um assembler para RISC-V que simula a execução de um programa em um processador RISC-V.
 \end{abstract}
 
 \begin{IEEEkeywords}
-RISC-V, Assembly, RARS, Pulsar, Introdução aos Sistemas Computacionais, UnB, jogos, videogame  
+RISC-V, Assembly, RARS, Pulsar, Introdução aos Sistemas Computacionais, UnB, jogos, videogame, arcade
 \end{IEEEkeywords}
 
-\section{Introduction}
-This document is a model and instructions for \LaTeX.
-Please observe the conference page limits. 
+\section{Introdução}
+Nossa implementação do jogo tem como objetivo contar uma história fictícia sobre um fantasma que pretende fugir de uma casa assombrada por se sentir fora de lugar nela. O dever do jogador é ajudá-lo a fazer isso, coletando chaves que abrirão portas, enfrentando inimigos, até o fantasma se encontrar finalmente livre. Dessa forma, estamos implementando todas as características do jogo de 1981, Pulsar, apenas com um tema estético diferente. 
 
-\section{Ease of Use}
+O projeto tem a intenção de ser um jogo de terror, usando músicas de suspense e sustos, incentivando o jogador a também querer ajudar o fantasma a sair da casa assombrada.
 
-\subsection{Maintaining the Integrity of the Specifications}
+Pela apresentação do projeto acontecer no mês de outubro, nomeamos nosso jogo: Pulsar (Edição de halloween).
 
-The IEEEtran class file is used to format your paper and style the text. All margins, 
-column widths, line spaces, and text fonts are prescribed; please do not 
-alter them. You may note peculiarities. For example, the head margin
-measures proportionately more than is customary. This measurement 
-and others are deliberate, using specifications that anticipate your paper 
-as one part of the entire proceedings, and not as an independent document. 
-Please do not revise any of the current designations.
+[Imagem para representar nosso jogo]
 
-\section{Prepare Your Paper Before Styling}
-Before you begin to format your paper, first write and save the content as a 
-separate text file. Complete all content and organizational editing before 
-formatting. Please note sections \ref{AA}--\ref{SCM} below for more information on 
-proofreading, spelling and grammar.
+\section{Metodologia}
 
-Keep your text and graphic files separate until after the text has been 
-formatted and styled. Do not number text heads---{\LaTeX} will do that 
-for you.
+\subsection{Música e efeitos sonoros}
 
-\subsection{Abbreviations and Acronyms}\label{AA}
-Define abbreviations and acronyms the first time they are used in the text, 
-even after they have been defined in the abstract. Abbreviations such as 
-IEEE, SI, MKS, CGS, ac, dc, and rms do not have to be defined. Do not use 
-abbreviations in the title or heads unless they are unavoidable.
+O jogo possui três músicas, uma de início, quando o jogador inicia o jogo; outra de derrota, quando o jogador morre no jogo; e uma de vitória, quando o jogador vence o jogo.
 
-\subsection{Units}
+Cada uma dessas teve que ser manualmente composta usando as ferramentas disponibilizadas no RARS. A partir de syscalls, sons podem ser reproduzidos e dessa forma uma música pode ser simulada, com acordes, ritmo e harmonia.
+
+As músicas em si são todas compostas de sons e músicas culturalmente famosas. A música de derrota é uma derivação do efeito sonoro de suspense famoso "Dun dun duuun!"$[3](https://en.wikipedia.org/wiki/Dun_dun_duuun!\#CITEREFSuspense1942)$ (comumente nomeado assim)
+logo a música de vitória é o conjunto dos sete primeiros acordes após a introdução de Marche Funèbre$[4]https://youtu.be/hZY5DBmgC_A$  
+
+Usamos de auxílio tutoriais de piano disponibilizados no YouTube para que pudéssemos saber as notas e suas durações de cada música.
+
+
+Quanto aos efeitos sonoros foi preciso apenas usar o syscall 31 do RARS, onde no registrador a2 é guardado um valor intermediário específico entre 120 à 127. Pois estes são os valores dedicados aos efeitos sonoros que o RARS possui.
+
+[Imagem mostrando o código de uma das músicas] 
+
+\subsection{Arte visual}
+
+[Imagem com a tela de início]
+[Imagem com o fantasma]
+[Imagem com o tiro]
+[Imagem com A fonte e sua inspiração]
+[Imagem com a fase 1]
+
+\subsection{Lógica do jogo}
+
+A base utilizada para o desenvolvimento das mecânica que foram utilizadas no jogo foi a estrutura do diagrama que criamos para facilitar a direção do desenvolvimento:
+
+[diagrama que criamos]
+
+Por meio do diagrama, foi possível desenvolver a estrutura básica para a troca entre as diferentes etapas do jogo, que são: Tela de Início, Fase 1, Fase 2, Tela de Morte, Tela de Vitória.
+
+Outra mecânica importante definida a partir do diagrama foram as condições que levariam para as mudanças entre as diferentes etapas, o que guiou o desenvolvimento do trabalho.
+
+Para o desenvolvimento das mecânicas internas do jogo, as quais não foram claramente definidas no diagrama base, foram desenvolvidos diferentes métodos para atingir os objetivos desejados. As mecânicas, com seus respectivos métodos, foram exemplificadas nos próximos tópicos.
+
+\subsubsection{Sistema de colisão}
+ O sistema de colisões e coletas de chaves foram baseados na análise das cores dos pixeis nos arredores dos personagnes, tiros e inimigos. Comparando as diferentes cores possíveis tornou-se possível determinar as reações esperadas para cada um dos casos e tornava um único código capaz de atender todos os objetivos citados
+
+[Imagem com a representação do sistema de colisão]
+\subsubsection{Movimentação do personagem} 
+  A movimentação do personagem, dos inimigos e dos tiros e a limpeza de rastros foram baseados em labels que continham  os valores da posição anterior e atual dos alvos da análise. As labels continham os valores X e Y do alvo que podem ser acessados por outras partes do código, possibilitando a movimentação, limpeza de rastros e o funcionamento do sistema de colisões.
+  
+\subsubsection{Inteligência dos inimigos} 
+  A inteligência dos inimigos criados para o jogo
 \begin{itemize}
-\item Use either SI (MKS) or CGS as primary units. (SI units are encouraged.) English units may be used as secondary units (in parentheses). An exception would be the use of English units as identifiers in trade, such as ``3.5-inch disk drive''.
-\item Avoid combining SI and CGS units, such as current in amperes and magnetic field in oersteds. This often leads to confusion because equations do not balance dimensionally. If you must use mixed units, clearly state the units for each quantity that you use in an equation.
-\item Do not mix complete spellings and abbreviations of units: ``Wb/m\textsuperscript{2}'' or ``webers per square meter'', not ``webers/m\textsuperscript{2}''. Spell out units when they appear in text: ``. . . a few henries'', not ``. . . a few H''.
-\item Use a zero before decimal points: ``0.25'', not ``.25''. Use ``cm\textsuperscript{3}'', not ``cc''.)
+  \item O rato
+  
+  [Imagem com o rato se movimentando pela parede]
+  
+  \item O morcego
+  
+  [Imagem com o morcego perseguindo o personagem]
 \end{itemize}
+ 
+\subsubsection{Sistema de chaves}  
+O sistema de chaves e portas foi feito com o uso de...
 
-\subsection{Equations}
-Number equations consecutively. To make your 
-equations more compact, you may use the solidus (~/~), the exp function, or 
-appropriate exponents. Italicize Roman symbols for quantities and variables, 
-but not Greek symbols. Use a long dash rather than a hyphen for a minus 
-sign. Punctuate equations with commas or periods when they are part of a 
-sentence, as in:
-\begin{equation}
-a+b=\gamma\label{eq}
-\end{equation}
+[Imagem com a chave e sua respectiva porta]
 
-Be sure that the 
-symbols in your equation have been defined before or immediately following 
-the equation. Use ``\eqref{eq}'', not ``Eq.~\eqref{eq}'' or ``equation \eqref{eq}'', except at 
-the beginning of a sentence: ``Equation \eqref{eq} is . . .''
+O Sistema de score foi feito... 
 
-\subsection{\LaTeX-Specific Advice}
+[Imagem com o Score]
 
-Please use ``soft'' (e.g., \verb|\eqref{Eq}|) cross references instead
-of ``hard'' references (e.g., \verb|(1)|). That will make it possible
-to combine sections, add equations, or change the order of figures or
-citations without having to go through the file line by line.
+\section{Resultados Obtidos}
+No geral, nossas dificuldades foram superadas e conseguimos criar um jogo completo, com início, meio e fim. 
 
-Please don't use the \verb|{eqnarray}| equation environment. Use
-\verb|{align}| or \verb|{IEEEeqnarray}| instead. The \verb|{eqnarray}|
-environment leaves unsightly spaces around relation symbols.
+O tema que tinhamos em mente foi implementado com sucesso assim como as técnicas que elaboramos para a execução do projeto. 
 
-Please note that the \verb|{subequations}| environment in {\LaTeX}
-will increment the main equation counter even when there are no
-equation numbers displayed. If you forget that, you might write an
-article in which the equation numbers skip from (17) to (20), causing
-the copy editors to wonder if you've discovered a new method of
-counting.
+Como resultado, a equipe adquiriu um melhor entendimento das mecânicas para o desenvolvimento em Assembly e a lógica de programação em Assembly na arquitetura RISC-V.
 
-{\BibTeX} does not work by magic. It doesn't get the bibliographic
-data from thin air but from .bib files. If you use {\BibTeX} to produce a
-bibliography you must send the .bib files. 
+Apesar de não termos conseguido implementar uma música de fundo para tocar durante o jogo, as músicas tocadas. Além disso, por um lado pode ser visto positivamente 
 
-{\LaTeX} can't read your mind. If you assign the same label to a
-subsubsection and a table, you might find that Table I has been cross
-referenced as Table IV-B3. 
+Desenvolvimento de habilidades relacionadas ao uso limitado de recursos para desenvolvimento de sistemas complexos(Música, imagens, mecênicas do jogo).
 
-{\LaTeX} does not have precognitive abilities. If you put a
-\verb|\label| command before the command that updates the counter it's
-supposed to be using, the label will pick up the last counter to be
-cross referenced instead. In particular, a \verb|\label| command
-should not go before the caption of a figure or a table.
-
-Do not use \verb|\nonumber| inside the \verb|{array}| environment. It
-will not stop equation numbers inside \verb|{array}| (there won't be
-any anyway) and it might stop a wanted equation number in the
-surrounding equation.
-
-\subsection{Some Common Mistakes}\label{SCM}
-\begin{itemize}
-\item The word ``data'' is plural, not singular.
-\item The subscript for the permeability of vacuum $\mu_{0}$, and other common scientific constants, is zero with subscript formatting, not a lowercase letter ``o''.
-\item In American English, commas, semicolons, periods, question and exclamation marks are located within quotation marks only when a complete thought or name is cited, such as a title or full quotation. When quotation marks are used, instead of a bold or italic typeface, to highlight a word or phrase, punctuation should appear outside of the quotation marks. A parenthetical phrase or statement at the end of a sentence is punctuated outside of the closing parenthesis (like this). (A parenthetical sentence is punctuated within the parentheses.)
-\item A graph within a graph is an ``inset'', not an ``insert''. The word alternatively is preferred to the word ``alternately'' (unless you really mean something that alternates).
-\item Do not use the word ``essentially'' to mean ``approximately'' or ``effectively''.
-\item In your paper title, if the words ``that uses'' can accurately replace the word ``using'', capitalize the ``u''; if not, keep using lower-cased.
-\item Be aware of the different meanings of the homophones ``affect'' and ``effect'', ``complement'' and ``compliment'', ``discreet'' and ``discrete'', ``principal'' and ``principle''.
-\item Do not confuse ``imply'' and ``infer''.
-\item The prefix ``non'' is not a word; it should be joined to the word it modifies, usually without a hyphen.
-\item There is no period after the ``et'' in the Latin abbreviation ``et al.''.
-\item The abbreviation ``i.e.'' means ``that is'', and the abbreviation ``e.g.'' means ``for example''.
-\end{itemize}
-An excellent style manual for science writers is \cite{b7}.
-
-\subsection{Authors and Affiliations}
-\textbf{The class file is designed for, but not limited to, six authors.} A 
-minimum of one author is required for all conference articles. Author names 
-should be listed starting from left to right and then moving down to the 
-next line. This is the author sequence that will be used in future citations 
-and by indexing services. Names should not be listed in columns nor group by 
-affiliation. Please keep your affiliations as succinct as possible (for 
-example, do not differentiate among departments of the same organization).
-
-\subsection{Identify the Headings}
-Headings, or heads, are organizational devices that guide the reader through 
-your paper. There are two types: component heads and text heads.
-
-Component heads identify the different components of your paper and are not 
-topically subordinate to each other. Examples include Acknowledgments and 
-References and, for these, the correct style to use is ``Heading 5''. Use 
-``figure caption'' for your Figure captions, and ``table head'' for your 
-table title. Run-in heads, such as ``Abstract'', will require you to apply a 
-style (in this case, italic) in addition to the style provided by the drop 
-down menu to differentiate the head from the text.
-
-Text heads organize the topics on a relational, hierarchical basis. For 
-example, the paper title is the primary text head because all subsequent 
-material relates and elaborates on this one topic. If there are two or more 
-sub-topics, the next level head (uppercase Roman numerals) should be used 
-and, conversely, if there are not at least two sub-topics, then no subheads 
-should be introduced.
-
-\subsection{Figures and Tables}
-\paragraph{Positioning Figures and Tables} Place figures and tables at the top and 
-bottom of columns. Avoid placing them in the middle of columns. Large 
-figures and tables may span across both columns. Figure captions should be 
-below the figures; table heads should appear above the tables. Insert 
-figures and tables after they are cited in the text. Use the abbreviation 
-``Fig.~\ref{fig}'', even at the beginning of a sentence.
-
-\begin{table}[htbp]
-\caption{Table Type Styles}
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline
-\textbf{Table}&\multicolumn{3}{|c|}{\textbf{Table Column Head}} \\
-\cline{2-4} 
-\textbf{Head} & \textbf{\textit{Table column subhead}}& \textbf{\textit{Subhead}}& \textbf{\textit{Subhead}} \\
-\hline
-copy& More table copy$^{\mathrm{a}}$& &  \\
-\hline
-\multicolumn{4}{l}{$^{\mathrm{a}}$Sample of a Table footnote.}
-\end{tabular}
-\label{tab1}
-\end{center}
-\end{table}
-
-\begin{figure}[htbp]
-\centerline{\includegraphics{fig1.png}}
-\caption{Example of a figure caption.}
-\label{fig}
-\end{figure}
-
-Figure Labels: Use 8 point Times New Roman for Figure labels. Use words 
-rather than symbols or abbreviations when writing Figure axis labels to 
-avoid confusing the reader. As an example, write the quantity 
-``Magnetization'', or ``Magnetization, M'', not just ``M''. If including 
-units in the label, present them within parentheses. Do not label axes only 
-with units. In the example, write ``Magnetization (A/m)'' or ``Magnetization 
-\{A[m(1)]\}'', not just ``A/m''. Do not label axes with a ratio of 
-quantities and units. For example, write ``Temperature (K)'', not 
-``Temperature/K''.
-
-\section*{Acknowledgment}
+\section*{Conclusão}
 
 The preferred spelling of the word ``acknowledgment'' in America is without 
 an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B. 
 G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor 
 acknowledgments in the unnumbered footnote on the first page.
 
-\section*{References}
+\section*{Referências Bibliográficas}
 
 Please number citations consecutively within brackets \cite{b1}. The 
 sentence punctuation follows the bracket \cite{b2}. Refer simply to the reference 
@@ -259,7 +170,5 @@ citation first, followed by the original foreign-language citation \cite{b6}.
 \bibitem{b7} M. Young, The Technical Writer's Handbook. Mill Valley, CA: University Science, 1989.
 \end{thebibliography}
 \vspace{12pt}
-\color{red}
-IEEE conference templates contain guidance text for composing and formatting conference papers. Please ensure that all template text is removed from your conference paper prior to submission to the conference. Failure to remove the template text from your paper may result in your paper not being published.
 
 \end{document}
