--- a/Relatório/IEEEtran.cls
+++ b/Relatório/IEEEtran.cls
@@ -2602,7 +2602,7 @@
 \def\contentsname{Contents}
 \def\listfigurename{List of Figures}
 \def\listtablename{List of Tables}
-\def\refname{References}
+\def\refname{Referências Bibliográficas}
 \def\indexname{Index}
 \def\figurename{Fig.}
 \def\tablename{TABLE}
